kubernetes/core/networking/ingress-nginx/app/external-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-ip-homeassistant
spec:
  ports:
    - name: app
      port: 80
      protocol: TCP
      targetPort: 8123
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-ip-homeassistant
subsets:
  - addresses:
      - ip: 192.168.0.150
    ports:
      - name: app
        port: 8123
        protocol: TCP

# SECOND FOR WJP TEST
---
apiVersion: v1
kind: Service
metadata:
  name: external-ip-wjp-dev
spec:
  ports:
    - name: app
      port: 80
      protocol: TCP
      targetPort: 5173
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: external-ip-wjp-dev
spec:
  ports:
    - name: app
      port: 8080
      protocol: TCP
      targetPort: 8080
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-ip-wjp-dev
subsets:
  - addresses:
      - ip: 192.168.0.181
    ports:
      - name: app
        port: 5173
        protocol: TCP
      - name: api
        port: 8080
        protocol: TCP
