kubernetes/core/networking/ingress-nginx/app/external-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress-homeassistant
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
    external-dns.home.arpa/enabled: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "ha.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: external-ip-homeassistant
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: tls-external-homeassistant
